WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283269
[WTF] WTFReportBacktraceWithPrefixAndStackDepth() crashes after
286344@main
https://bugs.webkit.org/show_bug.cgi?id=283269
Summary
[WTF] WTFReportBacktraceWithPrefixAndStackDepth() crashes after 286344@main
Wenson Hsieh
Reported
2024-11-17 13:55:30 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-11-17 13:59:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36777
EWS
Comment 2
2024-11-17 15:37:39 PST
Committed
286710@main
(5a6e1a9ddc36): <
https://commits.webkit.org/286710@main
> Reviewed commits have been landed. Closing PR #36777 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-17 15:38:15 PST
<
rdar://problem/140088831
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug