[WTF] WTFReportBacktraceWithPrefixAndStackDepth() crashes after 286344@main https://bugs.webkit.org/show_bug.cgi?id=283269

Reviewed by Abrar Rahman Protyasha.

Use `resize()` instead of `reserveInitialCapacity()` here — the latter only expands the backing
memory to the given capacity, but the initial size of the vector is still 0. This caused `subspan`
to crash immediately when attempting to access the subspan starting from `kDefaultFramesToSkip`.

* Source/WTF/wtf/Assertions.cpp:

Canonical link: https://commits.webkit.org/286710@main